# inky-display

./: .gitignore  README.md  Taskfile.yml  pyproject.toml  renovate.json  requirements.txt  run-display.service  run-display.sh
.github/: check.yml  dependabot.yml
.github/workflows/: check.yml
hack/: download-fonts.py
inky-display/: draw.py  fonts.py  main.py  schedule_event.py
